@@ -3,8 +3,12 @@
 - Improved: Rewritten login flow
 - Improved: Update certificate compatibility information
 - Improved: Demo server changes when the language is changed (#346)
+- Improved: Price and store lines on purchase page confirmation bottom sheet
 - Fixed: Crash when open store selection on purchase page (#347)
+- Fixed: Crash on purchase page when price was empty & scan mode active
+- Fixed: Behavior on purchase & consume pages when quantity units of product were missing
 - Fixed: Crash on consume page when location could not be found
+- Fixed: Crash on consume page when location_is_freezer was empty
 
 2.0.0-alpha02
 - New: Language option in appearance settings (#322)
